PLANET-7334: Fix HappyPoint height on mobile with Recaptcha (#1163)
Ref: https://jira.greenpeace.org/browse/PLANET-7334

--- a/assets/src/styles/blocks/Happypoint.scss
+++ b/assets/src/styles/blocks/Happypoint.scss
@@ -13,7 +13,8 @@
   }
 
   @include mobile-only {
-    height: 544px;
+    height: auto;
+    min-height: 544px;
   }
 
   @include medium-and-up {
